--- a/main/news.html
+++ b/main/news.html
@@ -3,38 +3,69 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>HTML ╠Б╨╩ ╧╝╪╜</title>
+    <title>HTML Й╦╟КЁ╦ К╛╦Л└°</title>
 </head>
 
 <body>
     <header>
-     <div>а╕аж╦фаж</div>
+     <div>Л═°Лё╪К╖╔Лё╪</div>
      <div>
          LOGIN JOIN
     </div>
 </header>
 
-    <nav>
-    EVENT EXPERIENCE SHOP BREWERY
-    </nav>
+<nav>
+    <ul>
+        <li>EVENT</li>
+        <li>ABOUT US</li>
+        <li>SHOP</li> 
+        <li>NEWS</li>
+        <li>CONTACT</li>
+    </ul>
+</nav>
 
     <main>
         <article>
-            <!-- ╫╫╤Сюл╣Е -->
+            <!-- Л┼╛К²╪Л²╢К⌠° -->
         </article>
         <article>
-            NEWS
-            а╕аж╦фажюг ╪р╫дю╩ ╬к╥а╣Е╦Ё╢о╢ы.
-            <!-- г╔ -->
-           < 1 2 3 >
+            <h1>NEWS</h1>
+            Л═°Лё╪К╖╔Лё╪Л²≤ Л├▄Л▀²Л²└ Л∙▄К═╓К⌠°К╕╫К▀┬К▀╓.<br><br>
+
+            <table>
+                <thread>
+                    <tr><th>Л═°К╙╘</th><th>Л·▒Л└╠Л▀°Й╟└</th></tr>
+                </thread>
+
+                <tbody>
+                    <tr>
+                        <td>[EVENT] Л═°Лё╪К╖╔Лё╪ 1Л╟╗ Й╢▒ЙЁ═ М─╢Л╕┬ Л²╢К╡╓М┼╦ К▀╧Л╡╗Л·░ К╟°М▒°</td>
+                        <td>2021-07-19</td>
+                    </tr>
+                    <tr>
+                        <td>[ЙЁ╣Л╖─] Л╫■К║°К┌≤ 19 Й╢─К═╗ К┌≤К╖▄Л²≤ Л╨═М∙▒Л╧╢ Л ╢Л≤│Л∙┬К┌╢</td>
+                        <td>2021-07-12</td>
+                    </tr>
+                    <tr>
+                        <td>[EXPERIENCE] Л═°Лё╪К╖╔Лё╪ К┌≤К╖▄Л²≤ Л╨═М∙▒Л╧╢Л≈░ Л╖─Л⌡░М∙≤Л└╦Л ■!</td>
+                        <td>2021-03-29</td>
+                    </tr>
+                    <tr>
+                        <td>[М≤°М┐²] М ▄Л⌡░ Й╟─Л·┘М∙╢Л└° М∙╜Л┐│ К╛╢Кё▄ К╟╟Л├║ К╟⌡Л·░!</td>
+                        <td>2020-07-23</td>
+                    </tr>
+             </tbody>
+            </table>
+            <!-- М▒° -->
+           <div>&lt;1 2 3 &gt;</div> 
         </article>
     </main>
 
     <footer>
-        <div>а╕аж╦фаж аж╫дх╦╩Г ╢Кг╔юл╩Г XXX</div>
+        <div>Л═°Лё╪К╖╔Лё╪ Лё╪Л▀²М ▄Л┌╛ К▄─М▒°Л²╢Л┌╛ XXX</div>
         <div>
-            аж╪р: ╪╜©О ф╞╨╟╫ц ╪╜цй╠╦.. 
-            ╢Кг╔юл╩Г: ╧з╪р©╛  ╟Ёюна╓╨╦╟Э╦╝ц╔юсюз : ╧з╪р©╛
+            Лё╪Л├▄: Л└°Л ╦ М┼╧КЁ└Л▀° Л└°Л╢┬Й╣╛.. 
+            К▄─М▒°Л²╢Л┌╛: К╟∙Л├▄Л≈╟  Й╟°Л²╦Л═∙КЁ╢Й╢─К╕╛Л╠┘Л·└Л·░ : К╟∙Л├▄Л≈╟
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
