--- a/main/shop.html
+++ b/main/shop.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
-    <title>HTML ╠Б╨╩ ╧╝╪╜</title>
+    <title>HTML Й╦╟КЁ╦ К╛╦Л└°</title>
 </head>
 
 <body>
     <header>
-     <div>а╕аж╦фаж</div>
+     <div>Л═°Лё╪К╖╔Лё╪</div>
      <div>
          LOGIN JOIN
     </div>
 </header>
 
-    <nav>
-    EVENT EXPERIENCE SHOP BREWERY
-    </nav>
+<nav>
+    <ul>
+        <li>EVENT</li>
+        <li>ABOUT US</li>
+        <li>SHOP</li> 
+        <li>NEWS</li>
+        <li>CONTACT</li>
+    </ul>
+</nav>
 
     <main>
         <article>
             <div>
-                CRISPY LAVAR SNACK
-                а╕аж©║╪╜ ╦╦Ё╜ бЩ╫р ╠Х╨н╟╒(4ea)
-                12,100©Ь
+                <P>CRISPY LAVAR SNACK</P>
+                <P>Л═°Лё╪Л≈░Л└° К╖▄К┌° Л╟╧Л▄─ Й╧─К╤─Й╟│(4ea)</P>
+                <P>&#8361;12,100Л⌡░</P>
             </div>
             <div>
-                JEJU BEER PLAYING CARD
-                а╕аж╦фаж а╤╬Ю╣╧ х╜еУ
-                8,800©Ь
+                <P>JEJU BEER PLAYING CARD</P>
+                <P>Л═°Лё╪К╖╔Лё╪ Л║╟Л∙╫К▐▄ М≥■М┬╛</P>
+                <P>&#8361;8,800Л⌡░</P>
             </div>
             <div>
-                OUR ALE GLASS
-                ╬ф©Ж ©║юо юЭ©Кюэ 473mL
-                8,800©Ь
+                <P> OUR ALE GLASS</P>
+                <P>Л∙└Л⌡▄ Л≈░Л²╪ Л═└Л ╘Л·■ 473mL</P>
+                <P> &#8361;8,800Л⌡░</P>
             </div>
             <div>
-                More comming soon!
+                <h2>More comming soon!</h2>
             </div>
         </article>
     </main>
 
     <footer>
-        <div>а╕аж╦фаж аж╫дх╦╩Г ╢Кг╔юл╩Г XXX</div>
+        <div>Л═°Лё╪К╖╔Лё╪ Лё╪Л▀²М ▄Л┌╛ К▄─М▒°Л²╢Л┌╛ XXX</div>
         <div>
-            аж╪р: ╪╜©О ф╞╨╟╫ц ╪╜цй╠╦.. 
-            ╢Кг╔юл╩Г: ╧з╪р©╛  ╟Ёюна╓╨╦╟Э╦╝ц╔юсюз : ╧з╪р©╛
+            Лё╪Л├▄: Л└°Л ╦ М┼╧КЁ└Л▀° Л└°Л╢┬Й╣╛.. 
+            К▄─М▒°Л²╢Л┌╛: К╟∙Л├▄Л≈╟  Й╟°Л²╦Л═∙КЁ╢Й╢─К╕╛Л╠┘Л·└Л·░ : К╟∙Л├▄Л≈╟
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
