--- a/main/template.html
+++ b/main/template.html
@@ -13,9 +13,14 @@
          LOGIN JOIN
     </div>
 </header>
-
     <nav>
-    EVENT EXPERIENCE SHOP BREWERY
+        <ul>
+            <li>EVENT</li>
+            <li>ABOUT US</li>
+            <li>SHOP</li> 
+            <li>NEWS</li>
+            <li>CONTACT</li>
+        </ul>
     </nav>
 
     <main>
