--- a/main/login.html
+++ b/main/login.html
@@ -14,9 +14,15 @@
     </div>
 </header>
 
-    <nav>
-    EVENT EXPERIENCE SHOP BREWERY
-    </nav>
+<nav>
+    <ul>
+        <li>EVENT</li>
+        <li>ABOUT US</li>
+        <li>SHOP</li> 
+        <li>NEWS</li>
+        <li>CONTACT</li>
+    </ul>
+</nav>
 
     <main>
         <div>
