--- a/main/news_read.html
+++ b/main/news_read.html
@@ -3,56 +3,62 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>HTML ±âº» ¹®¼­</title>
+    <title>HTML ê¸°ë³¸ ë¬¸ì„œ</title>
 </head>
 
 <body>
     <header>
-     <div>Á¦ÁÖ¸ÆÁÖ</div>
+     <div>ì œì£¼ë§¥ì£¼</div>
      <div>
          LOGIN JOIN
     </div>
 </header>
 
-    <nav>
-    EVENT EXPERIENCE SHOP BREWERY
-    </nav>
+<nav>
+    <ul>
+        <li>EVENT</li>
+        <li>ABOUT US</li>
+        <li>SHOP</li> 
+        <li>NEWS</li>
+        <li>CONTACT</li>
+    </ul>
+</nav>
 
     <main>
         <div>
             <div>
-            NEWS
-            Á¦ÁÖ¸ÆÁÖÀÇ ¼Ò½ÄÀ» ¾Ë·Áµå¸³´Ï´Ù.
+            <h1>NEWS</h1>
+            <p>ì œì£¼ë§¥ì£¼ì˜ ì†Œì‹ì„ ì•Œë ¤ë“œë¦½ë‹ˆë‹¤.</p>
              </div>
              <div>
-             °øÁö [°øÁö] ÄÚ·Î³ª 19 °ü·Ã ³ª¸¸ÀÇ Ä·ÇÎÄ« ¿î¿µ¾È³»    
+             ê³µì§€ [ê³µì§€] ì½”ë¡œë‚˜ 19 ê´€ë ¨ ë‚˜ë§Œì˜ ìº í•‘ì¹´ ìš´ì˜ì•ˆë‚´<br><br>
              </div>
              <div>
-                 news 2021-07-12
-             </div>
+                 news&nbsp; 2021-07-12
+             </div><hr>
              <div>
-                ¾È³çÇÏ¼¼¿ä, Á¦ÁÖ¸ÆÁÖÀÔ´Ï´Ù.
-                ÃÖ±Ù ÄÚ·Î³ª 19ÀÇ ±Þ°ÝÇÑ È®»ê¼¼ ¹× ¼öµµ±Ç »çÈ¸Àû °Å¸®µÎ±â 4´Ü°è °Ý»óÀÇ ÄÚ·Î³ª 19 ¹æ¿ª ÁöÄ§¿¡ µû¶ó
-                ³ª¸¸ÀÇ Ä·ÇÎÄ«´Â ¸ðµÎÀÇ ¾ÈÀüÀ» À§ÇØ 7¿ù 25ÀÏ±îÁö Àá½Ã ½¬¾î°¡±â·Î °áÁ¤ÇÏ¿´½À´Ï´Ù.
-                ÄÚ·Î³ª 19 È®»ê ÃßÀÌ¸¦ °í·ÁÇÏ¿© ±â°£Àº ¿¬ÀåµÉ ¼ö ÀÖÀ¸¸ç, ¿¬Àå À¯¹«´Â 7¿ù 26ÀÏ(¿ù)¿¡ ´Ù½Ã °øÁö µÉ ¿¹Á¤ÀÔ´Ï´Ù.
-                ¸¹Àº ¾çÇØ ºÎÅ¹µå¸®°Ú½À´Ï´Ù.
-                Á¦ÁÖ¸ÆÁÖ´Â Á¤ºÎÀÇ ¹æ¿ªÁöÄ§¿¡ Àû±Ø µ¿ÂüÇÏ¸ç, ÇÏ·ç»¡¸® ¸ðµÎ°¡ ¾È½ÉÇÏ°í ¸¸³¯ ¼ö ÀÖ´Â ±× ³¯À» ¼Ò¸ÁÇÕ´Ï´Ù.   
-             </div>
+                ì•ˆë…•í•˜ì„¸ìš”, ì œì£¼ë§¥ì£¼ìž…ë‹ˆë‹¤.<br>
+                ìµœê·¼ ì½”ë¡œë‚˜ 19ì˜ ê¸‰ê²©í•œ í™•ì‚°ì„¸ ë° ìˆ˜ë„ê¶Œ ì‚¬íšŒì  ê±°ë¦¬ë‘ê¸° 4ë‹¨ê³„ ê²©ìƒì˜ ì½”ë¡œë‚˜ 19 ë°©ì—­ ì§€ì¹¨ì— ë”°ë¼<br>
+                ë‚˜ë§Œì˜ ìº í•‘ì¹´ëŠ” ëª¨ë‘ì˜ ì•ˆì „ì„ ìœ„í•´ 7ì›” 25ì¼ê¹Œì§€ ìž ì‹œ ì‰¬ì–´ê°€ê¸°ë¡œ ê²°ì •í•˜ì˜€ìŠµë‹ˆë‹¤.<br>
+                ì½”ë¡œë‚˜ 19 í™•ì‚° ì¶”ì´ë¥¼ ê³ ë ¤í•˜ì—¬ ê¸°ê°„ì€ ì—°ìž¥ë  ìˆ˜ ìžˆìœ¼ë©°, ì—°ìž¥ ìœ ë¬´ëŠ” 7ì›” 26ì¼(ì›”)ì— ë‹¤ì‹œ ê³µì§€ ë  ì˜ˆì •ìž…ë‹ˆë‹¤.<br><br>
+                ë§Žì€ ì–‘í•´ ë¶€íƒë“œë¦¬ê² ìŠµë‹ˆë‹¤.<br>
+                ì œì£¼ë§¥ì£¼ëŠ” ì •ë¶€ì˜ ë°©ì—­ì§€ì¹¨ì— ì ê·¹ ë™ì°¸í•˜ë©°, í•˜ë£¨ë¹¨ë¦¬ ëª¨ë‘ê°€ ì•ˆì‹¬í•˜ê³  ë§Œë‚  ìˆ˜ ìžˆëŠ” ê·¸ ë‚ ì„ ì†Œë§í•©ë‹ˆë‹¤.<br> <br>
+             </div><hr>
              <div>
-                 <div>[EVENT] Á¦ÁÖ¸ÆÁÖ 1Â÷ ±¤°í ÄûÁî ÀÌº¥Æ® ´çÃ·ÀÚ ¹ßÇ¥</div>
-                 <div>[EXPERIENCE] Á¦ÁÖ¸ÆÁÖ ³ª¸¸ÀÇ Ä·ÇÎÄ« ´çÃ·ÀÚ ¾È³» (7¿ù 1ÁÖÂ÷)</div>
-             </div>
+                 <div>[EVENT] ì œì£¼ë§¥ì£¼ 1ì°¨ ê´‘ê³  í€´ì¦ˆ ì´ë²¤íŠ¸ ë‹¹ì²¨ìž ë°œí‘œ</div>
+                 <div>[EXPERIENCE] ì œì£¼ë§¥ì£¼ ë‚˜ë§Œì˜ ìº í•‘ì¹´ ë‹¹ì²¨ìž ì•ˆë‚´ (7ì›” 1ì£¼ì°¨)</div>
+             </div><hr>
              <div>
-                 ¸ñ·Ï
+                 ëª©ë¡
              </div>
         </div>
     </main>
 
     <footer>
-        <div>Á¦ÁÖ¸ÆÁÖ ÁÖ½ÄÈ¸»ç ´ëÇ¥ÀÌ»ç XXX</div>
+        <div>ì œì£¼ë§¥ì£¼ ì£¼ì‹íšŒì‚¬ ëŒ€í‘œì´ì‚¬ XXX</div>
         <div>
-            ÁÖ¼Ò: ¼­¿ï Æ¯º°½Ã ¼­ÃÊ±¸.. 
-            ´ëÇ¥ÀÌ»ç: ¹Ú¼Ò¿¬  °³ÀÎÁ¤º¸°ü¸®Ã¥ÀÓÀÚ : ¹Ú¼Ò¿¬
+            ì£¼ì†Œ: ì„œìš¸ íŠ¹ë³„ì‹œ ì„œì´ˆêµ¬.. 
+            ëŒ€í‘œì´ì‚¬: ë°•ì†Œì—°  ê°œì¸ì •ë³´ê´€ë¦¬ì±…ìž„ìž : ë°•ì†Œì—°
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
