--- a/main/index.html
+++ b/main/index.html
@@ -10,32 +10,57 @@
     <header>
      <div>제주맥주</div>
      <div>
-         LOGIN JOIN
+         <a href="login.html">LOGIN</a>
+         <a href="join.html">JOIN</a>
     </div>
 </header>
 
 <nav>
     <ul>
-        <li>EVENT</li>
-        <li>ABOUT US</li>
-        <li>SHOP</li> 
-        <li>NEWS</li>
-        <li>CONTACT</li>
+        <li><a href="index.html">EVENT</a></li>
+        <li><a href="about_us">ABOUT US</a></li>
+        <li><a href="shop.html">SHOP</a></li> 
+        <li><a href="news.html">NEWS</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
     </ul>
 </nav>
+
+<aside>
+    <div>
+        <img src="./img/share.png" width="50">
+        <img src="./img/up.png" width="50">
+    </div>
+</aside>
 
     <main>
 
         <section>
-            <!-- 동영상 -->
+            <video src="./videos/event.mp4" width="100%" playsinline autoplay muted loop>
+            이 브라우저는 지원하지 않습니다.
+        </video>
         </section>
 
         <section>
             <article>
                 제주맥주 광고 이벤트
-                히든클리프 호텔 숙박권
-                제주도 왕복 비행기 항공권
-                제주맥주 양조장 투어권
+                <div>
+                    <img src="./img/bg1.png" width="100%">
+                    <img src="./img/event_message.png">
+                    <img src="./img/suffer.png">   
+                </div>
+                <div>
+                    <img src="./img/img1.jpg">
+                    <p>히든클리프 호텔 숙박권</p>
+                </div>
+                <div>
+                    <img src="./img/img2.jpg">
+                    <p>제주도 왕복 비행기 항공권</p>
+                </div>
+                <div>
+                    <img src="./img/img3.jpg">
+                    <p>제주맥주 양조장 투어권</p>
+                </div>
+               
             </article>
 
             <article>
@@ -65,9 +90,20 @@
             </article>
 
             <article>
+                <img src="./img/bg2.jpg" width="100%">
                 <strong>QUIZ</strong><br>
-                4개 퀴즈를 전부 맞추면 선물이 펑펑!<br>
-                광고 영상 속에 힌트가 있어요.
+                <div>
+                    <p>
+                    4개 퀴즈를 전부 맞추면 선물이 펑펑!<br>
+                    광고 영상 속에 힌트가 있어요.
+                    </p>   
+                </div>
+                <div>
+                    <img src="./img/bg3.png" width="100%">
+                </div>
+                <div>
+                    <img src="./img/start_btn.png"> 
+                </div>
             </article>
         </section>
     </main>
