--- a/main/join_agree.html
+++ b/main/join_agree.html
@@ -3,51 +3,60 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>HTML ±âº» ¹®¼­</title>
+    <title>HTML ê¸°ë³¸ ë¬¸ì„œ</title>
 </head>
 
 <body>
     <header>
-     <div>Á¦ÁÖ¸ÆÁÖ</div>
+     <div>ì œì£¼ë§¥ì£¼</div>
      <div>
-         LOGIN JOIN
+         <a href="login.html">LOGIN</a>
+         <a href="join.html">JOIN</a>
     </div>
 </header>
 
 <nav>
     <ul>
-        <li>EVENT</li>
-        <li>ABOUT US</li>
-        <li>SHOP</li> 
-        <li>NEWS</li>
-        <li>CONTACT</li>
+        <li><a href="index.html">EVENT</a></li>
+        <li><a href="about_us">ABOUT US</a></li>
+        <li><a href="shop.html">SHOP</a></li> 
+        <li><a href="news.html">NEWS</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
     </ul>
 </nav>
+
+<aside>
+    <div>
+        <img src="./img/share.png" width="50">
+        <img src="./img/up.png" width="50">
+    </div>
+</aside>
+
 
     <main>
         <div>
             JOIN
-            ¾È³çÇÏ¼¼¿ä Á¦ÁÖ¸ÆÁÖÀÔ´Ï´Ù.
+            ì•ˆë…•í•˜ì„¸ìš” ì œì£¼ë§¥ì£¼ìž…ë‹ˆë‹¤.
         </div>
         <div>
-            ÀÌ¿ë¾à°ü, °³ÀÎÁ¤º¸ ¼öÁý ¹× ÀÌ¿ë¿¡ ¸ðµÎ µ¿ÀÇÇÕ´Ï´Ù.
-            ÀÌ¿ë¾à°ü µ¿ÀÇ(ÇÊ¼ö)
-            Á¦1Á¶ (¸ñÀû)
+            ì´ìš©ì•½ê´€, ê°œì¸ì •ë³´ ìˆ˜ì§‘ ë° ì´ìš©ì— ëª¨ë‘ ë™ì˜í•©ë‹ˆë‹¤.
+            ì´ìš©ì•½ê´€ ë™ì˜(í•„ìˆ˜)
+            ì œ1ì¡° (ëª©ì )
 
-            ÀÌ ¾à°üÀº Á¦ÁÖÆÐ¹Ð¸® ÁÖ½ÄÈ¸»ç(ÀüÀÚ»ó°Å·¡ »ç¾÷ÀÚ)°¡ ¿î¿µÇÏ´Â ºê·£µå »çÀÌÆ® ¹× ¿Â¶óÀÎ
-            ¸ô(ÀÌÇÏ ¡°¸ô¡±ÀÌ¶ó ÇÑ´Ù)¿¡¼­ Á¦°øÇÏ´Â ÀÎÅÍ³Ý °ü·Ã ¼­ºñ½º(ÀÌÇÏ ¡°¼­ºñ½º¡±¶ó ÇÑ´Ù)¸¦ ÀÌ¿ëÇÔ¿¡
-            ÀÖ¾î »çÀÌ¹ö ¸ô°ú ÀÌ¿ëÀÚÀÇ ±Ç¸®?ÀÇ¹« ¹× Ã¥ÀÓ»çÇ×À» ±ÔÁ¤ÇÔÀ» ¸ñÀûÀ¸·Î ÇÕ´Ï´Ù.
+            ì´ ì•½ê´€ì€ ì œì£¼íŒ¨ë°€ë¦¬ ì£¼ì‹íšŒì‚¬(ì „ìžìƒê±°ëž˜ ì‚¬ì—…ìž)ê°€ ìš´ì˜í•˜ëŠ” ë¸Œëžœë“œ ì‚¬ì´íŠ¸ ë° ì˜¨ë¼ì¸
+            ëª°(ì´í•˜ â€œëª°â€ì´ë¼ í•œë‹¤)ì—ì„œ ì œê³µí•˜ëŠ” ì¸í„°ë„· ê´€ë ¨ ì„œë¹„ìŠ¤(ì´í•˜ â€œì„œë¹„ìŠ¤â€ë¼ í•œë‹¤)ë¥¼ ì´ìš©í•¨ì—
+            ìžˆì–´ ì‚¬ì´ë²„ ëª°ê³¼ ì´ìš©ìžì˜ ê¶Œë¦¬?ì˜ë¬´ ë° ì±…ìž„ì‚¬í•­ì„ ê·œì •í•¨ì„ ëª©ì ìœ¼ë¡œ í•©ë‹ˆë‹¤.
 
-            SMS ¼ö½Å µ¿ÀÇ (¼±ÅÃ)
-            E-Mail ¼ö½Å µ¿ÀÇ (¼±ÅÃ)
+            SMS ìˆ˜ì‹  ë™ì˜ (ì„ íƒ)
+            E-Mail ìˆ˜ì‹  ë™ì˜ (ì„ íƒ)
         </div>
     </main>
 
     <footer>
-        <div>Á¦ÁÖ¸ÆÁÖ ÁÖ½ÄÈ¸»ç ´ëÇ¥ÀÌ»ç XXX</div>
+        <div>ì œì£¼ë§¥ì£¼ ì£¼ì‹íšŒì‚¬ ëŒ€í‘œì´ì‚¬ XXX</div>
         <div>
-            ÁÖ¼Ò: ¼­¿ï Æ¯º°½Ã ¼­ÃÊ±¸.. 
-            ´ëÇ¥ÀÌ»ç: ¹Ú¼Ò¿¬  °³ÀÎÁ¤º¸°ü¸®Ã¥ÀÓÀÚ : ¹Ú¼Ò¿¬
+            ì£¼ì†Œ: ì„œìš¸ íŠ¹ë³„ì‹œ ì„œì´ˆêµ¬.. 
+            ëŒ€í‘œì´ì‚¬: ë°•ì†Œì—°  ê°œì¸ì •ë³´ê´€ë¦¬ì±…ìž„ìž : ë°•ì†Œì—°
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
