--- a/main/shop.html
+++ b/main/shop.html
@@ -9,33 +9,50 @@
     <header>
      <div>제주맥주</div>
      <div>
-         LOGIN JOIN
+         <a href="login.html">LOGIN</a>
+         <a href="join.html">JOIN</a>
     </div>
 </header>
 
 <nav>
     <ul>
-        <li>EVENT</li>
-        <li>ABOUT US</li>
-        <li>SHOP</li> 
-        <li>NEWS</li>
-        <li>CONTACT</li>
+        <li><a href="index.html">EVENT</a></li>
+        <li><a href="about_us">ABOUT US</a></li>
+        <li><a href="shop.html">SHOP</a></li> 
+        <li><a href="news.html">NEWS</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
     </ul>
 </nav>
+
+<aside>
+    <div>
+        <img src="./img/share.png" width="50">
+        <img src="./img/up.png" width="50">
+    </div>
+</aside>
 
     <main>
         <article>
             <div>
+                <div>
+                    <img src="./img/shop1.jpg">
+                </div>
                 <P>CRISPY LAVAR SNACK</P>
                 <P>제주에서 만난 찹쌀 김부각(4ea)</P>
                 <P>&#8361;12,100원</P>
             </div>
             <div>
+                <div>
+                    <img src="./img/shop2.jpg">
+                </div>
                 <P>JEJU BEER PLAYING CARD</P>
                 <P>제주맥주 조약돌 화투</P>
                 <P>&#8361;8,800원</P>
             </div>
             <div>
+                <div>
+                    <img src="./img/shop3.jpg">
+                </div>
                 <P> OUR ALE GLASS</P>
                 <P>아워 에일 전용잔 473mL</P>
                 <P> &#8361;8,800원</P>
