--- a/main/login.html
+++ b/main/login.html
@@ -3,44 +3,52 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>HTML ╠Б╨╩ ╧╝╪╜</title>
+    <title>HTML Й╦╟КЁ╦ К╛╦Л└°</title>
 </head>
 
 <body>
     <header>
-     <div>а╕аж╦фаж</div>
+     <div>Л═°Лё╪К╖╔Лё╪</div>
      <div>
-         LOGIN JOIN
+         <a href="login.html">LOGIN</a>
+         <a href="join.html">JOIN</a>
     </div>
 </header>
 
 <nav>
     <ul>
-        <li>EVENT</li>
-        <li>ABOUT US</li>
-        <li>SHOP</li> 
-        <li>NEWS</li>
-        <li>CONTACT</li>
+        <li><a href="index.html">EVENT</a></li>
+        <li><a href="about_us">ABOUT US</a></li>
+        <li><a href="shop.html">SHOP</a></li> 
+        <li><a href="news.html">NEWS</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
     </ul>
 </nav>
+
+<aside>
+    <div>
+        <img src="./img/share.png" width="50">
+        <img src="./img/up.png" width="50">
+    </div>
+</aside>
 
     <main>
         <div>
             LOGIN
             <div>
-                ╥н╠вюн ╩Себ ю╞аЖ
-                ╥н╠вюн
-                х╦©Ь╟║ют
-                ╬фюл╣П╨Я╧п╧Ьхё цё╠Б
+                К║°Й╥╦Л²╦ Л┐│М┐° Л°═Л╖─
+                К║°Й╥╦Л²╦
+                М ▄Л⌡░Й╟─Л·┘
+                Л∙└Л²╢К■■К╧└К╟─К╡┬М≤╦ Л╟╬Й╦╟
             </div>
         </div>
     </main>
 
     <footer>
-        <div>а╕аж╦фаж аж╫дх╦╩Г ╢Кг╔юл╩Г XXX</div>
+        <div>Л═°Лё╪К╖╔Лё╪ Лё╪Л▀²М ▄Л┌╛ К▄─М▒°Л²╢Л┌╛ XXX</div>
         <div>
-            аж╪р: ╪╜©О ф╞╨╟╫ц ╪╜цй╠╦.. 
-            ╢Кг╔юл╩Г: ╧з╪р©╛  ╟Ёюна╓╨╦╟Э╦╝ц╔юсюз : ╧з╪р©╛
+            Лё╪Л├▄: Л└°Л ╦ М┼╧КЁ└Л▀° Л└°Л╢┬Й╣╛.. 
+            К▄─М▒°Л²╢Л┌╛: К╟∙Л├▄Л≈╟  Й╟°Л²╦Л═∙КЁ╢Й╢─К╕╛Л╠┘Л·└Л·░ : К╟∙Л├▄Л≈╟
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
