--- a/main/news.html
+++ b/main/news.html
@@ -10,23 +10,39 @@
     <header>
      <div>제주맥주</div>
      <div>
-         LOGIN JOIN
+         <a href="login.html">LOGIN</a>
+         <a href="join.html">JOIN</a>
     </div>
 </header>
 
 <nav>
     <ul>
-        <li>EVENT</li>
-        <li>ABOUT US</li>
-        <li>SHOP</li> 
-        <li>NEWS</li>
-        <li>CONTACT</li>
+        <li><a href="index.html">EVENT</a></li>
+        <li><a href="about_us">ABOUT US</a></li>
+        <li><a href="shop.html">SHOP</a></li> 
+        <li><a href="news.html">NEWS</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
     </ul>
 </nav>
 
+<aside>
+    <div>
+        <img src="./img/share.png" width="50">
+        <img src="./img/up.png" width="50">
+    </div>
+</aside>
+
     <main>
         <article>
-            <!-- 슬라이드 -->
+            <div>
+                <img src="./img/news1.png">
+            </div>
+            <div>
+                <img src="./img/news2.png">
+            </div>
+            <div>
+                <img src="./img/news3.png">
+            </div>
         </article>
         <article>
             <h1>NEWS</h1>
@@ -54,7 +70,7 @@
                         <td>[혜택] 회원 가입해서 항상 무료 배송 받자!</td>
                         <td>2020-07-23</td>
                     </tr>
-             </tbody>
+                </tbody>
             </table>
             <!-- 표 -->
            <div>&lt;1 2 3 &gt;</div> 
