--- a/main/template.html
+++ b/main/template.html
@@ -10,18 +10,27 @@
     <header>
      <div>제주맥주</div>
      <div>
-         LOGIN JOIN
+         <a href="login.html">LOGIN</a>
+         <a href="join.html">JOIN</a>
     </div>
 </header>
-    <nav>
-        <ul>
-            <li>EVENT</li>
-            <li>ABOUT US</li>
-            <li>SHOP</li> 
-            <li>NEWS</li>
-            <li>CONTACT</li>
-        </ul>
-    </nav>
+
+<nav>
+    <ul>
+        <li><a href="index.html">EVENT</a></li>
+        <li><a href="about_us">ABOUT US</a></li>
+        <li><a href="shop.html">SHOP</a></li> 
+        <li><a href="news.html">NEWS</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+    </ul>
+</nav>
+
+    <aside>
+        <div>
+            <img src="./img/share.png" width="50">
+            <img src="./img/up.png" width="50">
+        </div>
+    </aside>
 
     <main>
     </main>
