--- a/main/login.html
+++ b/main/login.html
@@ -34,13 +34,19 @@
 
     <main>
         <div>
-            LOGIN
-            <div>
-                로그인 상태 유지
-                로그인
-                회원가입
-                아이디비밀번호 찾기
-            </div>
+            <h3>LOGIN</h3>
+            <form>
+                <div>
+                <input type="email" placeholder="이메일" name="email"><br>
+                <input type="password" placeholder="비밀번호" name="password"><br>
+                <input type="checkbox" id="keep_login" name="keep_login">
+                <label for="keep_login">로그인 상태 유지</label><br>
+                <button type="submit">로그인</button><br>
+                <a href=#>회원가입</a>
+                <a href=#>아이디비밀번호 찾기</a>
+                <hr>
+              </div>
+            </form>
         </div>
     </main>
 
