--- a/main/join.html
+++ b/main/join.html
@@ -34,11 +34,49 @@
 
     <main>
         <div>
-            JOIN
+            JOIN<br>
             안녕하세요 제주맥주입니다.
-        </div>
+        </div><br>
     </main>
+    <div>
+     <form>
+        <div>
+            <input type="file" id="photo" name="photo">
+        </div><br>
+        <div>
+            <input type="email" id="email" name="email" placeholder="이메일"><br>
+            <input type="password" id="password" name="password" placeholder="비밀번호"><br>
+            <input type="password2" id="password2" name="password2" placeholder="비밀번호 확인"><br>
+        </div>
+        <div>
+            <label>이름</label><br>
+            <input type="name" id="name" name="name" placeholder="이름을(를) 입력하세요">
+            <label>성별</label><br>
+            <input type="radio" id="man">남자<br>
+            <input type="radio" id="woman">여자<br>
+        </div>
+        <div>
+            <label>연락처</label><br>
+            <input type="number" id="call" placeholder="연락처"><br>
+        </div>
+        <div>
+            <label>주소</label><br>
+            <input type="text" id="address" placeholder="주소"><br>
+            <input type="text" id="detailaddress" placeholder="상세주소"><br>
+        </div>
+        <div>
+            <label>생년월일</label><br>
+            <input type="date"><br>
+        </div>
+        <div>
+            <input id="agree_terms" name="agree_terms" type="hidden">
+            <input id="marketing_sms_agree" name="agree_terms" type="hidden">
+            <input id="marketing_email_agree" name="agree_terms" type="hidden">
+            <button type="submit">가입하기</button>
 
+        </div>
+     </form>
+    </div>  
     <footer>
         <div>제주맥주 주식회사 대표이사 XXX</div>
         <div>
