--- a/main/join_agree.html
+++ b/main/join_agree.html
@@ -35,20 +35,44 @@
 
     <main>
         <div>
-            JOIN
+            JOIN<br>
             안녕하세요 제주맥주입니다.
         </div>
         <div>
-            이용약관, 개인정보 수집 및 이용에 모두 동의합니다.
-            이용약관 동의(필수)
-            제1조 (목적)
+            <form>
+            <div>
+                <label><input type="checkbox" id="agree_all">이용약관, 개인정보 수집 및 이용에 모두 동의합니다.</label><br>
+            </div>
+         <div>  
+         <input type="checkbox" name="agree_terms" id="agree_terms">
+         <label for ="agree_terms">이용약관 동의(필수)</label><br>
+        
+         <textarea cols="40" rows="10" readonly>
+        제1조 (목적)
 
-            이 약관은 제주패밀리 주식회사(전자상거래 사업자)가 운영하는 브랜드 사이트 및 온라인
-            몰(이하 “몰”이라 한다)에서 제공하는 인터넷 관련 서비스(이하 “서비스”라 한다)를 이용함에
-            있어 사이버 몰과 이용자의 권리?의무 및 책임사항을 규정함을 목적으로 합니다.
+        이 약관은 제주패밀리 주식회사(전자상거래 사업자)가 운영하는 브랜드 사이트 및 온라인몰(이하 “몰”이라 한다)에서 제공하는 인터넷 관련 서비스(이하 “서비스”라 한다)를 이용함에있어 사이버 몰과 이용자의 권리?의무 및 책임사항을 규정함을 목적으로 합니다.
+        
+        제2조 (정의)
 
-            SMS 수신 동의 (선택)
-            E-Mail 수신 동의 (선택)
+        ① “몰”이란 제주패밀리 회사가 재화 또는 용역(이하 “재화 등”이라 함)을 이용자에게 제공하기 위하여 컴퓨터 등 정보통신설비를 이용하여 재화 등을 거래할 수 있도록 설정한 가상의 영업장을 말하며, 아울러 사이버몰을 운영하는 사업자의 의미로도 사용합니다.
+        ② “이용자”란 “몰”에 접속하여 이 약관에 따라 “몰”이 제공하는 서비스를 받는 회원 및 비회원을 말합니다.
+        ③ ‘회원’이라 함은 “몰”에 회원등록을 한 자로서, 계속적으로 “몰”이 제공하는 서비스를 이용할 수 있는 자를 말합니다.
+        ④ ‘비회원’이라 함은 회원에 가입하지 않고 “몰”이 제공하는 서비스를 이용하는 자를 말합니다.
+
+        </textarea>
+        </div> 
+        <div>
+            마케팅 활용 동의 및 광고 수신 동의<br>
+            서비스와 관련된 신상품 소식, 이벤트 안내, 고객 혜택 등 다양한 정보를 제공합니다.    
+            <input type="checkbox" id="marketing_sms_agree">SMS 수신 동의 (선택)<br>
+            <input type="checkbox" id="marketing_email_agree">E-Mail 수신 동의 (선택)<br>
+        </div>
+
+        <div>
+            <input type="reset" value="취소">
+            <input type="submit" value="가입하기">
+        </div>
+        </form>
         </div>
     </main>
 
