--- a/main/template.html
+++ b/main/template.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 
 <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="UTF-8">
     <title>HTML 기본 문서</title>
 </head>
