--- a/main/join.html
+++ b/main/join.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>HTML 기본 문서</title>
 </head>
 
@@ -34,8 +35,8 @@
 
     <main>
         <div>
-            JOIN<br>
-            안녕하세요 제주맥주입니다.
+            <h1>JOIN</h1>
+            안녕하세요 제주맥주입니다.<br>
         </div><br>
     </main>
     <div>
@@ -47,26 +48,26 @@
             <input type="email" id="email" name="email" placeholder="이메일"><br>
             <input type="password" id="password" name="password" placeholder="비밀번호"><br>
             <input type="password2" id="password2" name="password2" placeholder="비밀번호 확인"><br>
-        </div>
+        </div><br>
         <div>
             <label>이름</label><br>
-            <input type="name" id="name" name="name" placeholder="이름을(를) 입력하세요">
+            <input type="name" id="name" name="name" placeholder="이름을(를) 입력하세요"><br><br>
             <label>성별</label><br>
             <input type="radio" id="man">남자<br>
-            <input type="radio" id="woman">여자<br>
+            <input type="radio" id="woman">여자<br><br>
         </div>
         <div>
             <label>연락처</label><br>
-            <input type="number" id="call" placeholder="연락처"><br>
+            <input type="number" id="call" placeholder="연락처"><br><br>
         </div>
         <div>
             <label>주소</label><br>
             <input type="text" id="address" placeholder="주소"><br>
-            <input type="text" id="detailaddress" placeholder="상세주소"><br>
+            <input type="text" id="detailaddress" placeholder="상세주소"><br><br>
         </div>
         <div>
             <label>생년월일</label><br>
-            <input type="date"><br>
+            <input type="date"><br><br>
         </div>
         <div>
             <input id="agree_terms" name="agree_terms" type="hidden">
