--- a/main/news.html
+++ b/main/news.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>HTML 기본 문서</title>
 </head>
 
@@ -72,8 +73,8 @@
                     </tr>
                 </tbody>
             </table>
-            <!-- 표 -->
-           <div>&lt;1 2 3 &gt;</div> 
+            <br>
+           <div>&lt;1 2 3&gt;</div>
         </article>
     </main>
 
