--- a/main/news_read.html
+++ b/main/news_read.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>HTML 기본 문서</title>
 </head>
 
@@ -66,11 +67,11 @@
                 제주맥주는 정부의 방역지침에 적극 동참하며, 하루빨리 모두가 안심하고 만날 수 있는 그 날을 소망합니다.<br> <br>
              </div><hr>
              <div>
-                 <div>[EVENT] 제주맥주 1차 광고 퀴즈 이벤트 당첨자 발표</div>
+                 <div>[EVENT] 제주맥주 1차 광고 퀴즈 이벤트 당첨자 발표</div><hr>
                  <div>[EXPERIENCE] 제주맥주 나만의 캠핑카 당첨자 안내 (7월 1주차)</div>
              </div><hr>
              <div>
-                 목록
+                 <a href="news.html">목록</a>
              </div>
         </div>
     </main>
