--- a/main/shop.html
+++ b/main/shop.html
@@ -2,10 +2,12 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>HTML 기본 문서</title>
 </head>
 
 <body>
+    
     <header>
      <div>제주맥주</div>
      <div>
