--- a/main/shop_detail.html
+++ b/main/shop_detail.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>HTML 기본 문서</title>
 </head>
 
@@ -69,7 +70,7 @@
 
             <div>
                 <table>
-                    <caption>상품정보</caption>
+                    <caption><h3>상품정보</h3></caption>
                     <tr>
                         <td>제품명</td>
                         <td>제주에서 만난 찹쌀 김부각</td>
@@ -90,7 +91,7 @@
                 </table>
 
                 <table>
-                    <caption>배송안내(전국택배배송|CJ대한통운)</caption>
+                    <caption><h3>배송안내</h3>(전국택배배송|CJ대한통운)</caption>
                     
                     <tr>
                         <td>배송비</td>
@@ -105,7 +106,7 @@
             </div>
 
             <div>
-                <b>교환 및 환불 안내</b><br>
+                <b><h3>교환 및 환불 안내</h3></b>
                 제주맥주에서 구매하신 제품은 받으셨을 때와 동일한 상태로, 구매 후 7일 이내 교환/환불이 가능합니다.<br>
                 단순 변심으로 인한 교환 시 왕복 배송비 6천원, 환불 시 3천원을 청구합니다.<br>
                 오배송, 불량으로 인한 교환/환불 시 배송비 무료입니다.<br>
