--- a/main/login.html
+++ b/main/login.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>HTML 기본 문서</title>
 </head>
 
@@ -34,7 +35,7 @@
 
     <main>
         <div>
-            <h3>LOGIN</h3>
+            <h1>LOGIN</h1>
             <form>
                 <div>
                 <input type="email" placeholder="이메일" name="email"><br>
