--- a/main/template.html
+++ b/main/template.html
@@ -2,15 +2,15 @@
 <html lang="ko">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <meta charset="UTF-8">
     <title>HTML 기본 문서</title>
 </head>
-
+<div id="container">
 <body>
     <header>
-     <div>제주맥주</div>
-     <div>
+     <div id="logo"><h1>제주맥주</h1></div>
+     <div id="user">
          <a href="login.html">LOGIN</a>
          <a href="join.html">JOIN</a>
     </div>
@@ -44,5 +44,6 @@
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
+</div>
 </body>
 </html>
