--- a/main/join.html
+++ b/main/join.html
@@ -9,29 +9,31 @@
 
 <body>
     <header>
-     <div>제주맥주</div>
-     <div>
-         <a href="login.html">LOGIN</a>
-         <a href="join.html">JOIN</a>
-    </div>
-</header>
+        <div id="logo">
+            <h1>제주맥주</h1>
+        </div>
+        <div id="user">
+            <a href="login.html">LOGIN</a>
+            <a href="join.html">JOIN</a>
+        </div>
+    </header>
 
-<nav>
-    <ul>
-        <li><a href="index.html">EVENT</a></li>
-        <li><a href="about_us">ABOUT US</a></li>
-        <li><a href="shop.html">SHOP</a></li> 
-        <li><a href="news.html">NEWS</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-    </ul>
-</nav>
+    <nav class="clear">
+        <ul>
+            <li><a href="index.html">EVENT</a></li>
+            <li><a href="about_us">ABOUT US</a></li>
+            <li><a href="shop.html">SHOP</a></li>
+            <li><a href="news.html">NEWS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </nav>
 
-<aside>
-    <div>
-        <img src="./img/share.png" width="50">
-        <img src="./img/up.png" width="50">
-    </div>
-</aside>
+    <aside>
+        <div>
+            <img src="./img/share.png" width="50"><br>
+            <img src="./img/up.png" width="50">
+        </div>
+    </aside>
 
     <main>
         <div>
@@ -40,51 +42,52 @@
         </div><br>
     </main>
     <div>
-     <form>
-        <div>
-            <input type="file" id="photo" name="photo">
-        </div><br>
-        <div>
-            <input type="email" id="email" name="email" placeholder="이메일"><br>
-            <input type="password" id="password" name="password" placeholder="비밀번호"><br>
-            <input type="password2" id="password2" name="password2" placeholder="비밀번호 확인"><br>
-        </div><br>
-        <div>
-            <label>이름</label><br>
-            <input type="name" id="name" name="name" placeholder="이름을(를) 입력하세요"><br><br>
-            <label>성별</label><br>
-            <input type="radio" id="man">남자<br>
-            <input type="radio" id="woman">여자<br><br>
-        </div>
-        <div>
-            <label>연락처</label><br>
-            <input type="number" id="call" placeholder="연락처"><br><br>
-        </div>
-        <div>
-            <label>주소</label><br>
-            <input type="text" id="address" placeholder="주소"><br>
-            <input type="text" id="detailaddress" placeholder="상세주소"><br><br>
-        </div>
-        <div>
-            <label>생년월일</label><br>
-            <input type="date"><br><br>
-        </div>
-        <div>
-            <input id="agree_terms" name="agree_terms" type="hidden">
-            <input id="marketing_sms_agree" name="agree_terms" type="hidden">
-            <input id="marketing_email_agree" name="agree_terms" type="hidden">
-            <button type="submit">가입하기</button>
+        <form>
+            <div>
+                <input type="file" id="photo" name="photo">
+            </div><br>
+            <div>
+                <input type="email" id="email" name="email" placeholder="이메일"><br>
+                <input type="password" id="password" name="password" placeholder="비밀번호"><br>
+                <input type="password2" id="password2" name="password2" placeholder="비밀번호 확인"><br>
+            </div><br>
+            <div>
+                <label>이름</label><br>
+                <input type="name" id="name" name="name" placeholder="이름을(를) 입력하세요"><br><br>
+                <label>성별</label><br>
+                <input type="radio" id="man">남자<br>
+                <input type="radio" id="woman">여자<br><br>
+            </div>
+            <div>
+                <label>연락처</label><br>
+                <input type="number" id="call" placeholder="연락처"><br><br>
+            </div>
+            <div>
+                <label>주소</label><br>
+                <input type="text" id="address" placeholder="주소"><br>
+                <input type="text" id="detailaddress" placeholder="상세주소"><br><br>
+            </div>
+            <div>
+                <label>생년월일</label><br>
+                <input type="date"><br><br>
+            </div>
+            <div>
+                <input id="agree_terms" name="agree_terms" type="hidden">
+                <input id="marketing_sms_agree" name="agree_terms" type="hidden">
+                <input id="marketing_email_agree" name="agree_terms" type="hidden">
+                <button type="submit">가입하기</button>
 
-        </div>
-     </form>
-    </div>  
+            </div>
+        </form>
+    </div>
     <footer>
         <div>제주맥주 주식회사 대표이사 XXX</div>
         <div>
-            주소: 서울 특별시 서초구.. 
-            대표이사: 박소연  개인정보관리책임자 : 박소연
+            주소: 서울 특별시 서초구..
+            대표이사: 박소연 개인정보관리책임자 : 박소연
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
 </body>
+
 </html>
