--- a/main/join_agree.html
+++ b/main/join_agree.html
@@ -9,29 +9,31 @@
 
 <body>
     <header>
-     <div>제주맥주</div>
-     <div>
-         <a href="login.html">LOGIN</a>
-         <a href="join.html">JOIN</a>
-    </div>
-</header>
+        <div id="logo">
+            <h1>제주맥주</h1>
+        </div>
+        <div id="user">
+            <a href="login.html">LOGIN</a>
+            <a href="join.html">JOIN</a>
+        </div>
+    </header>
 
-<nav>
-    <ul>
-        <li><a href="index.html">EVENT</a></li>
-        <li><a href="about_us">ABOUT US</a></li>
-        <li><a href="shop.html">SHOP</a></li> 
-        <li><a href="news.html">NEWS</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-    </ul>
-</nav>
+    <nav class="clear">
+        <ul>
+            <li><a href="index.html">EVENT</a></li>
+            <li><a href="about_us">ABOUT US</a></li>
+            <li><a href="shop.html">SHOP</a></li>
+            <li><a href="news.html">NEWS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </nav>
 
-<aside>
-    <div>
-        <img src="./img/share.png" width="50">
-        <img src="./img/up.png" width="50">
-    </div>
-</aside>
+    <aside>
+        <div>
+            <img src="./img/share.png" width="50"><br>
+            <img src="./img/up.png" width="50">
+        </div>
+    </aside>
 
 
     <main>
@@ -41,14 +43,14 @@
         </div><br>
         <div>
             <form id="join_agree">
-            <div>
-                <label><input type="checkbox" id="agree_all">이용약관, 개인정보 수집 및 이용에 모두 동의합니다.</label><br>
-            </div>
-         <div>  
-         <input type="checkbox" name="agree_terms" id="agree_terms">
-         <label for ="agree_terms">이용약관 동의(필수)</label><br><br>
-        
-         <textarea cols="40" rows="10" readonly>
+                <div>
+                    <label><input type="checkbox" id="agree_all">이용약관, 개인정보 수집 및 이용에 모두 동의합니다.</label><br>
+                </div>
+                <div>
+                    <input type="checkbox" name="agree_terms" id="agree_terms">
+                    <label for="agree_terms">이용약관 동의(필수)</label><br><br>
+
+                    <textarea cols="40" rows="10" readonly>
         제1조 (목적)
 
         이 약관은 제주패밀리 주식회사(전자상거래 사업자)가 운영하는 브랜드 사이트 및 온라인몰(이하 “몰”이라 한다)에서 제공하는 인터넷 관련 서비스(이하 “서비스”라 한다)를 이용함에있어 사이버 몰과 이용자의 권리?의무 및 책임사항을 규정함을 목적으로 합니다.
@@ -61,29 +63,30 @@
         ④ ‘비회원’이라 함은 회원에 가입하지 않고 “몰”이 제공하는 서비스를 이용하는 자를 말합니다.
 
         </textarea>
-        </div> <br>
-        <div>
-            마케팅 활용 동의 및 광고 수신 동의<br>
-            서비스와 관련된 신상품 소식, 이벤트 안내, 고객 혜택 등 다양한 정보를 제공합니다.<br>    
-            <input type="checkbox" id="marketing_sms_agree">SMS 수신 동의 (선택)<br>
-            <input type="checkbox" id="marketing_email_agree">E-Mail 수신 동의 (선택)<br>
-        </div><br>
+                </div> <br>
+                <div>
+                    마케팅 활용 동의 및 광고 수신 동의<br>
+                    서비스와 관련된 신상품 소식, 이벤트 안내, 고객 혜택 등 다양한 정보를 제공합니다.<br>
+                    <input type="checkbox" id="marketing_sms_agree">SMS 수신 동의 (선택)<br>
+                    <input type="checkbox" id="marketing_email_agree">E-Mail 수신 동의 (선택)<br>
+                </div><br>
 
-        <div>
-            <input type="reset" value="취소">
-            <input type="submit" value="가입하기">
-        </div>
-        </form>
+                <div>
+                    <input type="reset" value="취소">
+                    <input type="submit" value="가입하기">
+                </div>
+            </form>
         </div>
     </main>
 
     <footer>
         <div>제주맥주 주식회사 대표이사 XXX</div>
         <div>
-            주소: 서울 특별시 서초구.. 
-            대표이사: 박소연  개인정보관리책임자 : 박소연
+            주소: 서울 특별시 서초구..
+            대표이사: 박소연 개인정보관리책임자 : 박소연
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
 </body>
+
 </html>
