--- a/main/login.html
+++ b/main/login.html
@@ -9,44 +9,46 @@
 
 <body>
     <header>
-     <div>제주맥주</div>
-     <div>
-         <a href="login.html">LOGIN</a>
-         <a href="join.html">JOIN</a>
-    </div>
-</header>
+        <div id="logo">
+            <h1>제주맥주</h1>
+        </div>
+        <div id="user">
+            <a href="login.html">LOGIN</a>
+            <a href="join.html">JOIN</a>
+        </div>
+    </header>
 
-<nav>
-    <ul>
-        <li><a href="index.html">EVENT</a></li>
-        <li><a href="about_us">ABOUT US</a></li>
-        <li><a href="shop.html">SHOP</a></li> 
-        <li><a href="news.html">NEWS</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-    </ul>
-</nav>
+    <nav class="clear">
+        <ul>
+            <li><a href="index.html">EVENT</a></li>
+            <li><a href="about_us">ABOUT US</a></li>
+            <li><a href="shop.html">SHOP</a></li>
+            <li><a href="news.html">NEWS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </nav>
 
-<aside>
-    <div>
-        <img src="./img/share.png" width="50">
-        <img src="./img/up.png" width="50">
-    </div>
-</aside>
+    <aside>
+        <div>
+            <img src="./img/share.png" width="50"><br>
+            <img src="./img/up.png" width="50">
+        </div>
+    </aside>
 
     <main>
         <div>
             <h1>LOGIN</h1>
             <form>
                 <div>
-                <input type="email" placeholder="이메일" name="email"><br>
-                <input type="password" placeholder="비밀번호" name="password"><br>
-                <input type="checkbox" id="keep_login" name="keep_login">
-                <label for="keep_login">로그인 상태 유지</label><br>
-                <button type="submit">로그인</button><br>
-                <a href=#>회원가입</a>
-                <a href=#>아이디비밀번호 찾기</a>
-                <hr>
-              </div>
+                    <input type="email" placeholder="이메일" name="email"><br>
+                    <input type="password" placeholder="비밀번호" name="password"><br>
+                    <input type="checkbox" id="keep_login" name="keep_login">
+                    <label for="keep_login">로그인 상태 유지</label><br>
+                    <button type="submit">로그인</button><br>
+                    <a href=#>회원가입</a>
+                    <a href=#>아이디비밀번호 찾기</a>
+                    <hr>
+                </div>
             </form>
         </div>
     </main>
@@ -54,10 +56,11 @@
     <footer>
         <div>제주맥주 주식회사 대표이사 XXX</div>
         <div>
-            주소: 서울 특별시 서초구.. 
-            대표이사: 박소연  개인정보관리책임자 : 박소연
+            주소: 서울 특별시 서초구..
+            대표이사: 박소연 개인정보관리책임자 : 박소연
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
 </body>
+
 </html>
