--- a/main/news.html
+++ b/main/news.html
@@ -9,52 +9,58 @@
 
 <body>
     <header>
-     <div>제주맥주</div>
-     <div>
-         <a href="login.html">LOGIN</a>
-         <a href="join.html">JOIN</a>
-    </div>
-</header>
+        <div id="logo">
+            <h1>제주맥주</h1>
+        </div>
+        <div id="user">
+            <a href="login.html">LOGIN</a>
+            <a href="join.html">JOIN</a>
+        </div>
+    </header>
 
-<nav>
-    <ul>
-        <li><a href="index.html">EVENT</a></li>
-        <li><a href="about_us">ABOUT US</a></li>
-        <li><a href="shop.html">SHOP</a></li> 
-        <li><a href="news.html">NEWS</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-    </ul>
-</nav>
+    <nav class="clear">
+        <ul>
+            <li><a href="index.html">EVENT</a></li>
+            <li><a href="about_us">ABOUT US</a></li>
+            <li><a href="shop.html">SHOP</a></li>
+            <li><a href="news.html">NEWS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </nav>
 
-<aside>
-    <div>
-        <img src="./img/share.png" width="50">
-        <img src="./img/up.png" width="50">
-    </div>
-</aside>
+    <aside>
+        <div>
+            <img src="./img/share.png" width="50"><br>
+            <img src="./img/up.png" width="50">
+        </div>
+    </aside>
 
     <main>
         <article>
             <div>
-                <img src="./img/news1.png">
+                <img src="./img/news1.png" width="100%">
             </div>
             <div>
-                <img src="./img/news2.png">
+                <img src="./img/news2.png" width="100%">
             </div>
             <div>
-                <img src="./img/news3.png">
+                <img src="./img/news3.png" width="100%">
             </div>
         </article>
         <article>
+            <div class="space"></div>
             <h1>NEWS</h1>
             제주맥주의 소식을 알려드립니다.<br><br>
 
             <table>
                 <thread>
-                    <tr><th>제목</th><th>작성시간</th></tr>
+                    <tr>
+                        <th>제목</th>
+                        <th>작성시간</th>
+                    </tr>
                 </thread>
 
-                <tbody>
+                <tbody class="newstable">
                     <tr>
                         <td>[EVENT] 제주맥주 1차 광고 퀴즈 이벤트 당첨자 발표</td>
                         <td>2021-07-19</td>
@@ -71,20 +77,33 @@
                         <td>[혜택] 회원 가입해서 항상 무료 배송 받자!</td>
                         <td>2020-07-23</td>
                     </tr>
+                    <tr>
+                        <td>[EXPERIENCE] SG다인힐 캠핑세트와 함께 나만의 캠핑카 여행을!!</td>
+                        <td>2020-06-28</td>
+                    </tr>
+                    <tr>
+                        <td>[EXPERIENCE] 제주맥주 나만의 캠핑카 당첨자 안내 (6월 3주차)</td>
+                        <td>2020-06-21</td>
+                    </tr>
+                    <tr>
+                        <td>[EXPERIENCE] 제주맥주 나만의 캠핑카 당첨자 안내 (6월 2주차)</td>
+                        <td>2020-06-14</td>
+                    </tr>
                 </tbody>
             </table>
             <br>
-           <div>&lt;1 2 3&gt;</div>
+            <div>&lt;1 2 3&gt;</div>
         </article>
     </main>
 
     <footer>
         <div>제주맥주 주식회사 대표이사 XXX</div>
         <div>
-            주소: 서울 특별시 서초구.. 
-            대표이사: 박소연  개인정보관리책임자 : 박소연
+            주소: 서울 특별시 서초구..
+            대표이사: 박소연 개인정보관리책임자 : 박소연
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
 </body>
+
 </html>
