--- a/main/news_read.html
+++ b/main/news_read.html
@@ -9,29 +9,31 @@
 
 <body>
     <header>
-     <div>제주맥주</div>
-     <div>
-         <a href="login.html">LOGIN</a>
-         <a href="join.html">JOIN</a>
-    </div>
-</header>
+        <div id="logo">
+            <h1>제주맥주</h1>
+        </div>
+        <div id="user">
+            <a href="login.html">LOGIN</a>
+            <a href="join.html">JOIN</a>
+        </div>
+    </header>
 
-<nav>
-    <ul>
-        <li><a href="index.html">EVENT</a></li>
-        <li><a href="about_us">ABOUT US</a></li>
-        <li><a href="shop.html">SHOP</a></li> 
-        <li><a href="news.html">NEWS</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-    </ul>
-</nav>
+    <nav class="clear">
+        <ul>
+            <li><a href="index.html">EVENT</a></li>
+            <li><a href="about_us">ABOUT US</a></li>
+            <li><a href="shop.html">SHOP</a></li>
+            <li><a href="news.html">NEWS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </nav>
 
-<aside>
-    <div>
-        <img src="./img/share.png" width="50">
-        <img src="./img/up.png" width="50">
-    </div>
-</aside>
+    <aside>
+        <div>
+            <img src="./img/share.png" width="50"><br>
+            <img src="./img/up.png" width="50">
+        </div>
+    </aside>
 
 
     <main>
@@ -49,40 +51,45 @@
 
         <div>
             <div>
-            <h1>NEWS</h1>
-            <p>제주맥주의 소식을 알려드립니다.</p>
-             </div>
-             <div>
-             공지 [공지] 코로나 19 관련 나만의 캠핑카 운영안내<br><br>
-             </div>
-             <div>
-                 news&nbsp; 2021-07-12
-             </div><hr>
-             <div>
+                <h1>NEWS</h1>
+                <p>제주맥주의 소식을 알려드립니다.</p>
+            </div>
+            <div>
+                공지 [공지] 코로나 19 관련 나만의 캠핑카 운영안내<br><br>
+            </div>
+            <div>
+                news&nbsp; 2021-07-12
+            </div>
+            <hr>
+            <div>
                 안녕하세요, 제주맥주입니다.<br>
                 최근 코로나 19의 급격한 확산세 및 수도권 사회적 거리두기 4단계 격상의 코로나 19 방역 지침에 따라<br>
                 나만의 캠핑카는 모두의 안전을 위해 7월 25일까지 잠시 쉬어가기로 결정하였습니다.<br>
                 코로나 19 확산 추이를 고려하여 기간은 연장될 수 있으며, 연장 유무는 7월 26일(월)에 다시 공지 될 예정입니다.<br><br>
                 많은 양해 부탁드리겠습니다.<br>
                 제주맥주는 정부의 방역지침에 적극 동참하며, 하루빨리 모두가 안심하고 만날 수 있는 그 날을 소망합니다.<br> <br>
-             </div><hr>
-             <div>
-                 <div>[EVENT] 제주맥주 1차 광고 퀴즈 이벤트 당첨자 발표</div><hr>
-                 <div>[EXPERIENCE] 제주맥주 나만의 캠핑카 당첨자 안내 (7월 1주차)</div>
-             </div><hr>
-             <div>
-                 <a href="news.html">목록</a>
-             </div>
+            </div>
+            <hr>
+            <div>
+                <div>[EVENT] 제주맥주 1차 광고 퀴즈 이벤트 당첨자 발표</div>
+                <hr>
+                <div>[EXPERIENCE] 제주맥주 나만의 캠핑카 당첨자 안내 (7월 1주차)</div>
+            </div>
+            <hr>
+            <div>
+                <a href="news.html">목록</a>
+            </div>
         </div>
     </main>
 
     <footer>
         <div>제주맥주 주식회사 대표이사 XXX</div>
         <div>
-            주소: 서울 특별시 서초구.. 
-            대표이사: 박소연  개인정보관리책임자 : 박소연
+            주소: 서울 특별시 서초구..
+            대표이사: 박소연 개인정보관리책임자 : 박소연
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
 </body>
+
 </html>
