--- a/main/shop.html
+++ b/main/shop.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -7,60 +8,87 @@
 </head>
 
 <body>
-    
+
     <header>
-     <div>제주맥주</div>
-     <div>
-         <a href="login.html">LOGIN</a>
-         <a href="join.html">JOIN</a>
-    </div>
-</header>
+        <div id="logo">
+            <h1>제주맥주</h1>
+        </div>
+        <div id="user">
+            <a href="login.html">LOGIN</a>
+            <a href="join.html">JOIN</a>
+        </div>
+    </header>
 
-<nav>
-    <ul>
-        <li><a href="index.html">EVENT</a></li>
-        <li><a href="about_us">ABOUT US</a></li>
-        <li><a href="shop.html">SHOP</a></li> 
-        <li><a href="news.html">NEWS</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-    </ul>
-</nav>
+    <nav class="clear">
+        <ul>
+            <li><a href="index.html">EVENT</a></li>
+            <li><a href="about_us">ABOUT US</a></li>
+            <li><a href="shop.html">SHOP</a></li>
+            <li><a href="news.html">NEWS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </nav>
 
-<aside>
-    <div>
-        <img src="./img/share.png" width="50">
-        <img src="./img/up.png" width="50">
-    </div>
-</aside>
-
+    <aside>
+        <div>
+            <img src="./img/share.png" width="50"><br>
+            <img src="./img/up.png" width="50">
+        </div>
+    </aside>
+    <div class="space"></div>
     <main>
         <article>
-            <div>
+            <div class="shop_image">
                 <div>
-                    <img src="./img/shop1.jpg">
+                    <div>
+                        <img src="./img/shop1.jpg" width="400px">
+                    </div>
+
+                    <P>CRISPY LAVAR SNACK</P>
+                    <P>제주에서 만난 찹쌀 김부각(4ea)</P>
+                    <P>&#8361;12,100원</P>
                 </div>
-                <P>CRISPY LAVAR SNACK</P>
-                <P>제주에서 만난 찹쌀 김부각(4ea)</P>
-                <P>&#8361;12,100원</P>
-            </div>
-            <div>
                 <div>
-                    <img src="./img/shop2.jpg">
+                    <div>
+                        <img src="./img/shop2.jpg" width="400px">
+                    </div>
+                    <P>JEJU BEER PLAYING CARD</P>
+                    <P>제주맥주 조약돌 화투</P>
+                    <P>&#8361;8,800원</P>
                 </div>
-                <P>JEJU BEER PLAYING CARD</P>
-                <P>제주맥주 조약돌 화투</P>
-                <P>&#8361;8,800원</P>
-            </div>
-            <div>
                 <div>
-                    <img src="./img/shop3.jpg">
+                    <div>
+                        <img src="./img/shop3.jpg" width="400px">
+                    </div>
+                    <P> OUR ALE GLASS</P>
+                    <P>아워 에일 전용잔 473mL</P>
+                    <P> &#8361;8,800원</P>
                 </div>
-                <P> OUR ALE GLASS</P>
-                <P>아워 에일 전용잔 473mL</P>
-                <P> &#8361;8,800원</P>
-            </div>
-            <div>
-                <h2>More comming soon!</h2>
+                <div>
+                    <div>
+                        <img src="./img/shop5.jpg" width="400px">
+                    </div>
+                    <P>
+                        JEJU BEER GARNISH
+                    </P>
+                    <P>제주를 담은 감귤칩(20ea)</P>
+                    <P> &#8361;11,000원</P>
+                </div>
+                <div>
+                    <div>
+                        <img src="./img/shop4.png" width="400px">
+                    </div>
+                    <P>
+                        JEJU BEER GLASS
+                    </P>
+                    <P>제주맥주 전용잔 370mL</P>
+                    <P> &#8361;5,500원</P>
+
+                </div>
+                <div id="comesoon">
+                    <h2 class="white-font">More comming soon!</h2>
+                </div>
+
             </div>
         </article>
     </main>
@@ -68,10 +96,11 @@
     <footer>
         <div>제주맥주 주식회사 대표이사 XXX</div>
         <div>
-            주소: 서울 특별시 서초구.. 
-            대표이사: 박소연  개인정보관리책임자 : 박소연
+            주소: 서울 특별시 서초구..
+            대표이사: 박소연 개인정보관리책임자 : 박소연
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
 </body>
+
 </html>
