--- a/main/template.html
+++ b/main/template.html
@@ -7,43 +7,51 @@
     <title>HTML 기본 문서</title>
 </head>
 <div id="container">
-<body>
-    <header>
-     <div id="logo"><h1>제주맥주</h1></div>
-     <div id="user">
-         <a href="login.html">LOGIN</a>
-         <a href="join.html">JOIN</a>
-    </div>
-</header>
 
-<nav>
-    <ul>
-        <li><a href="index.html">EVENT</a></li>
-        <li><a href="about_us">ABOUT US</a></li>
-        <li><a href="shop.html">SHOP</a></li> 
-        <li><a href="news.html">NEWS</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-    </ul>
-</nav>
+    <body>
+        <header>
+            <div id="logo">
+                <h1>제주맥주</h1>
+            </div>
+            <div id="user">
+                <a href="login.html">LOGIN</a>
+                <a href="join.html">JOIN</a>
+            </div>
+        </header>
 
-    <aside>
-        <div>
-            <img src="./img/share.png" width="50">
-            <img src="./img/up.png" width="50">
-        </div>
-    </aside>
+        <nav class="clear">
+            <ul>
+                <li><a href="index.html">EVENT</a></li>
+                <li><a href="about_us">ABOUT US</a></li>
+                <li><a href="shop.html">SHOP</a></li>
+                <li><a href="news.html">NEWS</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
 
-    <main>
-    </main>
+        <aside>
+            <div>
+                <div class="sharebtn">
+                    <a href="#"><img src="./img/share.png" width="50"></a><br><br>
+                </div><br>
+                <div class="upbtn">
+                    <a href="#logo"><img src="./img/up.png" width="50"></a>
+                </div>
+            </div>
+        </aside>
 
-    <footer>
-        <div>제주맥주 주식회사 대표이사 XXX</div>
-        <div>
-            주소: 서울 특별시 서초구.. 
-            대표이사: 박소연  개인정보관리책임자 : 박소연
-        </div>
-        <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
-    </footer>
+        <main>
+        </main>
+
+        <footer>
+            <div>제주맥주 주식회사 대표이사 XXX</div>
+            <div>
+                주소: 서울 특별시 서초구..
+                대표이사: 박소연 개인정보관리책임자 : 박소연
+            </div>
+            <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
+        </footer>
 </div>
 </body>
+
 </html>
