--- a/main/index.html
+++ b/main/index.html
@@ -45,27 +45,30 @@
 
         <section>
             <article>
-                <div class="event_image">
-                    <p id="event">제주맥주 광고 이벤트</p>
+                <div class="space"></div>
+                <div class="event_area">
+
+                    <p class="white-font" id="event">제주맥주 광고 이벤트</p>
                     <div>
-                        <img id="bg" src="./img/bg1.png" width="100%">
-                        <img src="./img/event_message.png">
-                        <img src="./img/suffer.png">
+                        <img class="center-align" src="./img/event_message.png">
+                        <img class="suffer" src="./img/suffer.png">
                     </div>
-                    <div class="space"></div>
-                    <div class="event_image">
-                        <img src="./img/img1.jpg" width="350px">
-                        <p>히든클리프 호텔 숙박권</p>
-                    </div>
-                    <div class="event_image">
-                        <img src="./img/img2.jpg" width="350px">
-                        <p>제주도 왕복 비행기 항공권</p>
-                    </div>
-                    <div class="event_image">
-                        <img src="./img/img3.jpg" width="350px">
-                        <p>제주맥주 양조장 투어권</p>
-                    </div>
-                    <div class="space"></div>
+                </div>
+                <div class="space"></div>
+                <div class="inline">
+                    <img src="./img/img1.jpg" width="350px">
+                    <p>히든클리프 호텔 숙박권</p>
+                </div>
+                <div class="inline">
+                    <img src="./img/img2.jpg" width="350px">
+                    <p>제주도 왕복 비행기 항공권</p>
+                </div>
+                <div class="inline">
+                    <img src="./img/img3.jpg" width="350px">
+                    <p>제주맥주 양조장 투어권</p>
+                </div>
+                <div class="space"></div>
+
                 </div>
 
             </article>
@@ -99,29 +102,35 @@
             </article>
 
             <article>
-                <img src="./img/bg2.jpg" width="100%">
-                <h2>QUIZ</h2>
-                <div>
-                    <p>
-                        4개 퀴즈를 전부 맞추면 선물이 펑펑!<br>
-                        광고 영상 속에 힌트가 있어요.
-                    </p>
+                <div class="quiz_area">
+                    <h2 class="white-font" id="event">QUIZ</h2>
+                    <div id="quiz">
+                        <p>
+                            4개 퀴즈를 전부 맞추면 선물이 펑펑!<br>
+                            광고 영상 속에 힌트가 있어요.
+                        </p>
+                    </div>
                 </div>
-                <div>
-                    <img src="./img/bg3.png" width="100%">
-                </div>
-                <div>
-                    <img src="./img/start_btn.png">
+                <div id="quiz_img">
+                    <div id="quiz_startbtn">
+                        <img src="./img/start_btn.png">
+                    </div>
                 </div>
             </article>
         </section>
     </main>
 
     <footer>
-        <div>제주맥주 주식회사 대표이사 XXX</div>
+        <div>NOTICE</div><br>
         <div>
-            주소: 서울 특별시 서초구..
-            대표이사: 박소연 개인정보관리책임자 : 박소연
+            제주맥주 주식회사 대표이사 박소연
+            본사) 제주특별자치도 제주시 한림읍 금능농공길 62-11 서울사무실) 서울특별시 중구 동호로 228 동호 38빌딩 6층<br>
+            호스팅 제공자 (주)아임웹 사업자등록번호 616-86-27415 통신판매업신고번호 제 2020-제주한림-0101 호<br>
+            개인정보보호책임자 이용석 고객센터 02-2235-5559, jejubeer@jejubeer.co.kr<br>
+
+            COPYRIGHT 2021@ JEJU BEER COMPANY
+
+
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
