--- a/main/shop.html
+++ b/main/shop.html
@@ -40,64 +40,80 @@
         <article>
             <div class="shop_image">
                 <div>
-                    <div>
-                        <img src="./img/shop1.jpg" width="400px">
+                    <div class="shop_inner_image">
+                        <img src="./img/shop1.jpg">
+
+                        <P class="shop_inner_text1">CRISPY LAVAR SNACK</P>
+                        <P class="shop_inner_text2">제주에서 만난 찹쌀 김부각(4ea)</P>
+                        <P class="shop_inner_text3">&#8361;12,100원</P>
+                    </div>
+                </div>
+                <div>
+                    <div class="shop_inner_image">
+                        <img src="./img/shop2.jpg">
+
+                        <P class="shop_inner_text1">JEJU BEER PLAYING CARD</P>
+                        <P class="shop_inner_text2">제주맥주 조약돌 화투</P>
+                        <P class="shop_inner_text3">&#8361;8,800원</P>
+                    </div>
+                </div>
+                <div>
+                    <div class="shop_inner_image">
+                        <img src="./img/shop3.jpg">
+
+                        <P class="shop_inner_text1"> OUR ALE GLASS</P>
+                        <P class="shop_inner_text2">아워 에일 전용잔 473mL</P>
+                        <P class="shop_inner_text3"> &#8361;8,800원</P>
+                    </div>
+                </div>
+                <div>
+                    <div class="shop_inner_image">
+                        <img src="./img/shop5.jpg">
+
+                        <P class="shop_inner_text1">
+                            JEJU BEER GARNISH
+                        </P>
+                        <P class="shop_inner_text2">제주를 담은 감귤칩(20ea)</P>
+                        <P class="shop_inner_text3"> &#8361;11,000원</P>
+                    </div>
+                </div>
+                <div>
+                    <div class="shop_inner_image">
+                        <img src="./img/shop4.png">
+
+                        <P class="shop_inner_text1">
+                            JEJU BEER GLASS
+                        </P>
+                        <P class="shop_inner_text2">제주맥주 전용잔 370mL</P>
+                        <P class="shop_inner_text3"> &#8361;5,500원</P>
                     </div>
 
-                    <P>CRISPY LAVAR SNACK</P>
-                    <P>제주에서 만난 찹쌀 김부각(4ea)</P>
-                    <P>&#8361;12,100원</P>
                 </div>
-                <div>
-                    <div>
-                        <img src="./img/shop2.jpg" width="400px">
-                    </div>
-                    <P>JEJU BEER PLAYING CARD</P>
-                    <P>제주맥주 조약돌 화투</P>
-                    <P>&#8361;8,800원</P>
-                </div>
-                <div>
-                    <div>
-                        <img src="./img/shop3.jpg" width="400px">
-                    </div>
-                    <P> OUR ALE GLASS</P>
-                    <P>아워 에일 전용잔 473mL</P>
-                    <P> &#8361;8,800원</P>
-                </div>
-                <div>
-                    <div>
-                        <img src="./img/shop5.jpg" width="400px">
-                    </div>
-                    <P>
-                        JEJU BEER GARNISH
-                    </P>
-                    <P>제주를 담은 감귤칩(20ea)</P>
-                    <P> &#8361;11,000원</P>
-                </div>
-                <div>
-                    <div>
-                        <img src="./img/shop4.png" width="400px">
-                    </div>
-                    <P>
-                        JEJU BEER GLASS
-                    </P>
-                    <P>제주맥주 전용잔 370mL</P>
-                    <P> &#8361;5,500원</P>
 
+                <div>
+                    <div class="shop_inner_image comesoon">
+                        <div class="shop_inner_text4">
+                            <h2 class="white-font">More comming soon!</h2>
+                        </div>
+                    </div>
                 </div>
-                <div id="comesoon">
-                    <h2 class="white-font">More comming soon!</h2>
-                </div>
+
 
             </div>
         </article>
     </main>
 
     <footer>
-        <div>제주맥주 주식회사 대표이사 XXX</div>
+        <div>NOTICE</div><br>
         <div>
-            주소: 서울 특별시 서초구..
-            대표이사: 박소연 개인정보관리책임자 : 박소연
+            제주맥주 주식회사 대표이사 박소연
+            본사) 제주특별자치도 제주시 한림읍 금능농공길 62-11 서울사무실) 서울특별시 중구 동호로 228 동호 38빌딩 6층<br>
+            호스팅 제공자 (주)아임웹 사업자등록번호 616-86-27415 통신판매업신고번호 제 2020-제주한림-0101 호<br>
+            개인정보보호책임자 이용석 고객센터 02-2235-5559, jejubeer@jejubeer.co.kr<br>
+
+            COPYRIGHT 2021@ JEJU BEER COMPANY
+
+
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
