--- a/main/login.html
+++ b/main/login.html
@@ -37,27 +37,41 @@
 
     <main>
         <div>
-            <h1>LOGIN</h1>
+            <div class="space"></div>
+            <h1>LOGIN</h1><br><br>
             <form>
-                <div>
+                <div id="signin">
                     <input type="email" placeholder="이메일" name="email"><br>
-                    <input type="password" placeholder="비밀번호" name="password"><br>
-                    <input type="checkbox" id="keep_login" name="keep_login">
-                    <label for="keep_login">로그인 상태 유지</label><br>
-                    <button type="submit">로그인</button><br>
-                    <a href=#>회원가입</a>
-                    <a href=#>아이디비밀번호 찾기</a>
-                    <hr>
+                    <input type="password" placeholder="비밀번호" name="password"><br><br>
+                    <div class="checkbox_area">
+                        <input type="checkbox" id="keep_login" name="keep_login">
+                        <label for="keep_login">로그인 상태 유지</label><br>
+                    </div><br>
+                    <div id="signjoin">
+                        <button type="submit">로그인</button>
+                    </div>
+                    <div class="align_left">
+                        <a class=align_left href="join_agree.html">회원가입</a>
+                    </div>
+                    <div class="align_right">
+                        <a href="#">아이디비밀번호 찾기</a>
+                    </div>
                 </div>
             </form>
         </div>
     </main>
 
     <footer>
-        <div>제주맥주 주식회사 대표이사 XXX</div>
+        <div>NOTICE</div><br>
         <div>
-            주소: 서울 특별시 서초구..
-            대표이사: 박소연 개인정보관리책임자 : 박소연
+            제주맥주 주식회사 대표이사 박소연
+            본사) 제주특별자치도 제주시 한림읍 금능농공길 62-11 서울사무실) 서울특별시 중구 동호로 228 동호 38빌딩 6층<br>
+            호스팅 제공자 (주)아임웹 사업자등록번호 616-86-27415 통신판매업신고번호 제 2020-제주한림-0101 호<br>
+            개인정보보호책임자 이용석 고객센터 02-2235-5559, jejubeer@jejubeer.co.kr<br>
+
+            COPYRIGHT 2021@ JEJU BEER COMPANY
+
+
         </div>
         <div> COPYRIGHT c 2021 ALL RIGHTS RESERVED</div>
     </footer>
