--- a/main/login.html
+++ b/main/login.html
@@ -49,13 +49,15 @@
                     </div><br>
                     <div id="signjoin">
                         <button type="submit">로그인</button>
-                    </div>
-                    <div class="align_left">
+                    </div><br>
+
+                    <div class="login_left">
                         <a class=align_left href="join_agree.html">회원가입</a>
                     </div>
-                    <div class="align_right">
+                    <div class="login_right">
                         <a href="#">아이디비밀번호 찾기</a>
                     </div>
+
                 </div>
             </form>
         </div>
