--- a/main/news.html
+++ b/main/news.html
@@ -37,15 +37,16 @@
 
     <main>
         <article>
-            <div>
-                <img src="./img/news1.png" width="100%">
+
+            <div class="slide">
+                <ul>
+                    <li><img src="./img/news1.png" width="100%"></li>
+                    <li><img src="./img/news2.png" width="100%"></li>
+                    <li><img src="./img/news3.png" width="100%"></li>
+                </ul>
             </div>
-            <div>
-                <img src="./img/news2.png" width="100%">
-            </div>
-            <div>
-                <img src="./img/news3.png" width="100%">
-            </div>
+
+
         </article>
         <article>
             <div class="space"></div>
