--- a/main/shop_detail.html
+++ b/main/shop_detail.html
@@ -37,23 +37,25 @@
 
     <main>
 
-        <div>
-            <!-- 이미지 -->
+        <div id="detailimg">
+            <img src="./img/detail3.jpg" width="500" height="500">
         </div>
 
-        <div>
+        <div class="detailcontent">
             <b>CRISPY LAVAR SNACK</b><br>
-            <img src="./img/detail3.jpg" width="500" height="500"><br>
             제주에서 만난 찹쌀 김부각(4ea)<br><br>
             &#8361;12,100원
+
             <p><b>배송비</b>미가입 시 건당 3,000원</p>
-            <img src="./img/detail1.png"><br>
+            <img src="./img/detail1.png" width="300" height="30"><br>
 
             <input type="button" id="buynow" name="buynow" value="BUY NOW">
             <input type="button" id="cart" name="cart" value="CART">
+
         </div>
+        <div class="clear"></div>
         <hr>
-        <div>
+        <div class="content">
             <p>상세정보</p>
             <img src="./img/detail2.jpg" width="500" height="500"><br>
             <div>
