--- a/javascript/join.html
+++ b/javascript/join.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <script src="./script.js"></script>
     <title>HTML 기본 문서</title>
 </head>
 
@@ -68,7 +69,7 @@
 
                     var checkm = document.getElementById('man').checked;
                     var checkw = document.getElementById('woman').checked;
-                    
+
                     console.log(checkm);
                     if (checkw) {
                         alert("여자선택");
