--- a/javascript/shop_detail.html
+++ b/javascript/shop_detail.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <script src="./script.js"></script>
     <title>HTML 기본 문서</title>
 </head>
 
